# iqdb-persist

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: compression_bench.rs  wal_bench.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v1.0.0.md
examples/: save_and_load.rs  wal_recovery.rs
src/: checksum.rs  compression.rs  config.rs  error.rs  format.rs  lib.rs  persisted.rs  recovery.rs  storage.rs  wal.rs
tests/: adversarial.rs  compression.rs  header_roundtrip.rs  invariants.rs  wal.rs
