# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ
# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó  ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēĚ  ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēĚ ‚ēö‚ēź‚ēź‚ēź‚ēź‚Ėą‚Ėą‚ēĎ
# ‚Ėą‚Ėą‚ēĎ  ‚Ėą‚Ėą‚ēĎ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĎ     ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĎ
# ‚ēö‚ēź‚ēĚ  ‚ēö‚ēź‚ēĚ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ‚ēö‚ēź‚ēĚ     ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
#‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēó
#‚ēĎ Rust Efficiency & Performance ‚ēĎ
#‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
[package]
name    = "iqdb-persist"
version = "0.4.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.87"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Atomic snapshot persistence with versioned headers and CRC32 integrity for iQDB indexes - part of the iQDB family."

# Keywords (5 max)
keywords = [
    "persistence",
    "snapshot",
    "vector-database",
    "crc32",
    "iqdb"
]

# Categories
categories = [
    "database-implementations",
    "filesystem"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-persist"
repository    = "https://github.com/jamesgober/iqdb-persist"
documentation = "https://docs.rs/iqdb-persist"

# Authors
authors = [
    "James Gober <me@jamesgober.com>",
    "Matt Callahan <matthewcallahan01@icloud.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_persist"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# Standard library. Persistence is effectively std-only (file I/O,
# std::path, std::sync); the marker exists so a future no_std subset
# (header parsing in embedded contexts) does not break the surface.
std = []
# Derive `serde::{Serialize, Deserialize}` on the public config types so
# `PersistConfig` can round-trip through a config file. Additive; the
# on-disk snapshot format itself is hand-rolled and unaffected.
serde = ["dep:serde"]
# Zstd snapshot-payload compression (`Compression::Zstd`). Pulls the
# reference C library via the `zstd` crate for best ratio + speed.
zstd = ["dep:zstd"]
# LZ4 snapshot-payload compression (`Compression::Lz4`). Pure-Rust via
# `lz4_flex`: no C toolchain, fastest decompression.
lz4 = ["dep:lz4_flex"]


# DEPENDENCIES
# #################################
[dependencies]
# Shared iQDB vocabulary: DistanceMetric, IqdbError.
iqdb-types  = "1.0.0"
# The Index / IndexCore traits the persisted index is generic over.
iqdb-index  = "1.0.0"
# `ForgeError` trait: kind()/caption() so PersistError composes into the
# same structured error events the rest of the spine emits.
error-forge = "1.0.0"
# Tracing facade only. Instrumented at the save boundary; the byte-level
# header/payload paths stay free of any tracing call.
tracing     = { version = "0.1", default-features = false, features = ["attributes", "std"] }
# CRC32 over the on-disk payload. SIMD-accelerated (runtime-detected).
crc32fast   = "1.4"
# Optional, additive serialization for the config types.
serde       = { version = "1", optional = true, features = ["derive"] }
# Optional snapshot compression codecs (selected at runtime via
# `Compression`, gated at build time by the `zstd` / `lz4` features).
zstd        = { version = "0.13", optional = true }
lz4_flex    = { version = "0.11", optional = true }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# Property-based tests for header + WAL round-trip invariants.
proptest = "1"
# Temp dirs / files for atomic-save, CRC-mismatch, and WAL integration tests.
tempfile = "3"
# WAL append / replay hot-path benchmarks.
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "wal_bench"
harness = false

[[bench]]
name              = "compression_bench"
harness           = false
required-features = ["zstd", "lz4"]


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
